--- a/app/views/layouts/_side.html.haml
+++ b/app/views/layouts/_side.html.haml
@@ -1,4 +1,9 @@
--if menu = menus[path[0]] and path[1] != :__hidden__
+-for submenu in menus[path[0]]
+  =side_module "menu.#{path[0]}.#{submenu[0]}", tl("menus.submenus.#{submenu[0]}") do
+    -for url in submenu[1]
+      .sd-item{:class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}")}=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url])
+
+-#if menu = menus[path[0]] and path[1] != :__hidden__
   -items = menu[path[1]]||[]
   -if items.size > 1
     -prefix = "#{path[0]}_#{path[1]}"
@@ -9,17 +14,18 @@
           %li=link_to(t("actions.#{url[:controller]}.#{url[:action]}"), url[:url], :class=>(:current if path[2] == "#{url[:controller]}::#{url[:action]}"))
 
 -if session[:history].is_a?(Array) and not session[:history].size.zero?
-  .module.menu
-    %h2=tl("recent_historic")
-    %ul
-      -for page in session[:history][0..4]
-        %li
-          -title=h(page[:title])
-          -infotip  = h(tl("menus.#{page[:reverse][0]}"))
-          -if page[:reverse][1].to_s != "__hidden__"
-            -infotip << " &ndash; ".html_safe+h(tl("menus.submenus.#{page[:reverse][1]}")) 
-          =link_to(page[:title], page[:url], :title=>infotip.html_safe)
+  =side_module "history", tl("recent_historic") do
+    -for page in session[:history][0..4]
+      .sd-item
+        -title=h(page[:title])
+        -infotip  = h(tl("menus.#{page[:reverse][0]}"))
+        -if page[:reverse][1].to_s != "__hidden__"
+          -infotip << " &ndash; ".html_safe+h(tl("menus.submenus.#{page[:reverse][1]}")) 
+        =link_to(page[:title], page[:url], :title=>infotip.html_safe)
 
-.module.help.flex
+=side_module "help", tl("contextual_help") do
+  #help.flex=render :partial=>"help/search", :object=>@article
+  
+-#.module.help.flex
   %h2=tl("contextual_help")
   #help.flex=render :partial=>"help/search", :object=>@article
