Fixes bug on date l10n in CSV export and ODS export Adds exprimental print for unpaid sales

--- a/app/views/sales/index.html.haml
+++ b/app/views/sales/index.html.haml
@@ -8,5 +8,6 @@
 =toolbar do |t|
   -t.link :new
   -t.link :statistics
+  -t.print_sales Date.today.to_s, :action=>:index, :controller=>:sales
 
 =list
