--- a/app/assets/themes/tekyla/stylesheets/screen.css
+++ b/app/assets/themes/tekyla/stylesheets/screen.css
@@ -226,11 +226,25 @@ html[dir="rtl"] .main .mn-index {float: right; margin-left: 8px; }
 html[dir="ltr"] #top .logo-bar { background: white url(../../../images/ekylibre-mini3.png) left 7px no-repeat; padding: 0 8px 0 170px; }
 html[dir="rtl"] #top .logo-bar { background: white url(../../../images/ekylibre-mini3.png) right 7px no-repeat; padding: 0 170px 0 8px;}
 
-#top .user-bar { background: rgba(255,255,255,0.3); border-left: 1px solid rgba(255,255,255,0.32); height: 32px; padding: 0 4px;}
-#top .user-bar a { margin: 0 4px; position:relative; top: 7px;}
-#top .user-bar .im-printable, .user-bar .im-unprintable { background-position: center; }
-html[dir="ltr"] #top .user-bar { float:right; text-align:right; }
-html[dir="rtl"] #top .user-bar { float:left; text-align:left; }
+#top .user-bar { background: rgba(255,255,255,0.3); border: 1px solid rgba(255,255,255,0.32); border-top: none; border-bottom: none; height: 32px; padding: 0; position :relative; vertical-align:bottom;}
+#top .user-bar a.root { display:block; height: 32px; line-height: 32px; white-space: nowrap; vertical-align: middle; padding: 0 8px;}
+#top .user-bar ul { display: none; border: 1px solid #AAA; margin: 0; padding: 2px; position:absolute; margin:0; top: 30px; z-index: 1000; width:auto; min-width: 10em; background: #F1F1F1; box-shadow: 0 0 5px rgba(0,0,0,0.3)}
+#top .user-bar:hover { background: #F1F1F1; border-color: #AAA;}
+#top .user-bar:hover a.root { z-index:5000; position: relative; top: 0; background: #F1F1F1 }
+#top .user-bar:hover ul { display: block; }
+html[dir="ltr"] #top .user-bar ul { right: -1px; }
+html[dir="rtl"] #top .user-bar ul { left: -1px; }
+#top .user-bar ul li { display: block; padding: 2px 4px ;}
+#top .user-bar ul li:hover { background: #C9D7F1 }
+#top .user-bar ul li a { display: block; padding: 2px 6px; white-space: nowrap;}
+#top .user-bar ul li.separator { height: 0; padding: 0; border: 1px solid #AAA; margin: 3px auto;}
+#top .user-bar ul li.separator:hover, #top .user-bar ul li.no-link:hover { background: transparent;}
+
+#top .user-bar .name { font-weight: bold; }
+
+/*#top .user-bar > a { margin: 0 4px; position:relative; top: 7px;}*/
+html[dir="ltr"] #top .user-bar { float:right;  }
+html[dir="rtl"] #top .user-bar { float:left; }
 
 /*# .2357AB .3D5C8D .47628c 407ad8  688ED8*/
 #top .menu-bar { height: 29px; padding: 3px 8px 0; /*border-top: 1px solid #23579A;*/ background: #688ED8 url(../images/shadow-top.png) bottom repeat-x; display: block;}
